// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode off) 1`] = `
{
  "1": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "izn": true,
    "l": "Active",
    "o": Map {
      "@@selector-unnamed-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": {
        "val": 1,
      },
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": undefined,
      "_value": [Function],
      "key": "1",
    },
    "w": [],
  },
  "@@selector-unnamed-0": {
    "T": 2,
    "W": 2,
    "id": "@@selector-unnamed-0",
    "izn": true,
    "l": "Active",
    "o": Map {
      "Test-:r0:" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "p": [],
    "s": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": {
      "val": 1,
    },
    "w": [],
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode off) 2`] = `
{
  "1": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "izn": true,
    "l": "Active",
    "o": Map {
      "@@selector-unnamed-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": {
        "val": 2,
      },
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": undefined,
      "_value": [Function],
      "key": "1",
    },
    "w": [],
  },
  "@@selector-unnamed-0": {
    "T": 2,
    "W": 2,
    "id": "@@selector-unnamed-0",
    "izn": true,
    "l": "Active",
    "o": Map {
      "Test-:r0:" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 2,
        "j": undefined,
        "operation": "useAtomSelector",
      },
    },
    "p": [],
    "s": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": {
      "val": 2,
    },
    "w": [],
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode on) 1`] = `
{
  "1": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "izn": true,
    "l": "Stale",
    "o": Map {
      "@@selector-unnamed-1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": {
        "val": 1,
      },
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": undefined,
      "_value": [Function],
      "key": "1",
    },
    "w": [],
  },
  "@@selector-unnamed-1": {
    "T": 2,
    "W": 2,
    "id": "@@selector-unnamed-1",
    "izn": true,
    "l": "Active",
    "o": Map {
      "Test-:r0:" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "p": [],
    "s": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": {
      "val": 1,
    },
    "w": [],
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode on) 2`] = `
{
  "1": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "izn": true,
    "l": "Stale",
    "o": Map {
      "@@selector-unnamed-1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": {
        "val": 2,
      },
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": undefined,
      "_value": [Function],
      "key": "1",
    },
    "w": [],
  },
  "@@selector-unnamed-1": {
    "T": 2,
    "W": 2,
    "id": "@@selector-unnamed-1",
    "izn": true,
    "l": "Active",
    "o": Map {
      "Test-:r0:" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 2,
        "j": undefined,
        "operation": "useAtomSelector",
      },
    },
    "p": [],
    "s": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": {
      "val": 2,
    },
    "w": [],
  },
}
`;

exports[`useAtomSelector inline selectors are swapped out in strict mode double-renders 1`] = `
{
  "@@selector-unnamed-1": {
    "T": 2,
    "W": 2,
    "id": "@@selector-unnamed-1",
    "izn": true,
    "l": "Active",
    "o": Map {
      "Test-:r0:" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "p": [],
    "s": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 1,
    "w": [],
  },
}
`;

exports[`useAtomSelector inline selectors are swapped out in strict mode double-renders 2`] = `
{
  "@@selector-unnamed-1": {
    "T": 2,
    "W": 2,
    "id": "@@selector-unnamed-1",
    "izn": true,
    "l": "Active",
    "o": Map {
      "Test-:r0:" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 2,
        "operation": "useAtomSelector",
      },
    },
    "p": [],
    "s": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 1,
    "w": [],
  },
}
`;
